Fix Download Button Image Alignment

--- a/chunks/style.css
+++ b/chunks/style.css
@@ -392,7 +392,7 @@ header img {
 .home-down img {
     display: inline-block;
     height: .8em;
-    padding: .3em;
+    padding: .3em .3em .3em 0;
     vertical-align: top;
 }
 .home .first {
